fixed alignment issue when todo included emoji

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
         rgba(115, 115, 115, 0.5)
     );
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
 .container h1,
@@ -81,6 +82,7 @@ body {
 
 .todo-line {
     display: flex;
+    align-items: center;
     gap: 10px;
     padding: 10px 0;
     border-bottom: 1px dashed rgba(150, 150, 150, 0.5);
